Fix compilation after rebase on master